--- a/posts.html
+++ b/posts.html
@@ -33,6 +33,10 @@
             <div id="modal-content"></div>
         </div>
     </div>
-
+<footer>
+    <div class="footer-logo">
+        <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
+    </div>
+</footer>
 </body>
 </html>
