--- a/posts.html
+++ b/posts.html
@@ -35,7 +35,7 @@
     </div>
 <footer>
     <div class="footer-logo">
-        <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
+        <img src="https://i.imgur.com/CGZNeVW.png" alt="Logo">
     </div>
 </footer>
 </body>
