--- a/lab-notebook.html
+++ b/lab-notebook.html
@@ -22,7 +22,7 @@
     <div id="entries"></div>
 <footer>
     <div class="footer-logo">
-        <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
+        <img src="https://i.imgur.com/CGZNeVW.png" alt="Logo">
     </div>
 </footer>
 </body>
