--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </section>
 <footer>
     <div class="footer-logo">
-        <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
+        <img src="https://i.imgur.com/CGZNeVW.png" alt="Logo">
     </div>
 </footer>
 </body>
