--- a/gallery.html
+++ b/gallery.html
@@ -133,7 +133,7 @@
 </script>
 <footer>
     <div class="footer-logo">
-        <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
+        <img src="https://i.imgur.com/CGZNeVW.png" alt="Logo">
     </div>
 </footer>
 </body>
