--- a/about.html
+++ b/about.html
@@ -52,7 +52,21 @@
 <footer>
     <div class="footer-logo">
         <img src="https://i.imgur.com/CGZNeVW.png" alt="Logo">
+    <div class="footer-content">
+        <div class="footer-logo">
+            <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
+        </div>
+        <div class="social-links">
+            <a href="https://www.instagram.com/YOUR_USERNAME" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+            </a>
+            <a href="mailto:YOUR_EMAIL@example.com">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Email">
+            </a>
+        </div>
     </div>
+</footer>
+
 </footer>
 </body>
 </html>
