--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     <iframe src="cv.pdf" width="100%" height="600px"></iframe>
 </section>
 <footer>
-    <div class="footer-content">
+    <div class="footer-container">
         <div class="footer-logo">
             <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
         </div>
