--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="https://i.imgur.com/6GuZEMi.png" alt="Logo">
+            <img src="https://i.imgur.com/CGZNeVW.png" alt="Logo">
         </div>
         <div class="social-links">
             <a href="https://www.instagram.com/YOUR_USERNAME" target="_blank">
