--- a/gallery.html
+++ b/gallery.html
@@ -137,10 +137,10 @@
             <img src="https://i.imgur.com/CGZNeVW.png" alt="Logo">
         </div>
         <div class="social-links">
-            <a href="https://www.instagram.com/YOUR_USERNAME" target="_blank">
+            <a href="https://www.instagram.com/rodeo.toad" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
             </a>
-            <a href="mailto:YOUR_EMAIL@example.com">
+            <a href="mailto:mnewbrey@umass.edu">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png" alt="Email">
             </a>
         </div>
