--- a/gallery.html
+++ b/gallery.html
@@ -161,14 +161,14 @@
         </div>
 
         <!-- ✅ Videos Now Included in Grid -->
-        <div class="gallery-item fieldwork">
+        <div class="gallery-item videos">
             <iframe 
                 src="https://drive.google.com/file/d/YOUR_VIDEO_FILE_ID_1/preview" 
                 class="gallery-video">
             </iframe>
         </div>
 
-        <div class="gallery-item research">
+        <div class="gallery-item videos">
             <iframe 
                 src="https://drive.google.com/file/d/YOUR_VIDEO_FILE_ID_2/preview" 
                 class="gallery-video">
