--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
     <style>
-        /* ✅ Masonry Layout */
+        /* ✅ Masonry Grid Layout */
         .gallery-container {
             max-width: 1200px;
             margin: auto;
@@ -23,9 +23,9 @@
             width: 100%;
             margin-bottom: 15px;
             break-inside: avoid;
-            cursor: pointer;
             border-radius: 10px;
             transition: transform 0.2s ease-in-out;
+            cursor: pointer;
         }
 
         .gallery-item img {
@@ -73,25 +73,24 @@
             cursor: pointer;
         }
 
-        /* ✅ Filter Buttons */
-        .filter-buttons {
+        /* ✅ Filters as Text Options */
+        .filter-options {
             text-align: center;
+            font-size: 1.2em;
+            font-weight: bold;
             margin-bottom: 20px;
         }
 
-        .filter-buttons button {
-            background: #16a085;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            margin: 5px;
+        .filter-options span {
             cursor: pointer;
-            border-radius: 5px;
-            transition: 0.3s;
+            padding: 0 15px;
+            color: #16a085;
+            transition: 0.3s ease-in-out;
         }
 
-        .filter-buttons button.active, .filter-buttons button:hover {
-            background: #f39c12;
+        .filter-options span:hover,
+        .filter-options span.active {
+            color: #f39c12;
         }
 
         /* ✅ Responsive Adjustments */
@@ -106,7 +105,6 @@
                 column-count: 1;
             }
         }
-
     </style>
 </head>
 <body>
@@ -126,11 +124,11 @@
 <section class="gallery-container">
     <h1>Research & Fieldwork Gallery</h1>
 
-    <!-- ✅ Filter Buttons -->
-    <div class="filter-buttons">
-        <button class="list active" data-filter="all">ALL</button>
-        <button class="list" data-filter="fieldwork">PHOTOS</button>
-        <button class="list" data-filter="research">VIDEOS</button>
+    <!-- ✅ Filter as Text Options -->
+    <div class="filter-options">
+        <span class="list active" data-filter="all">ALL</span> |
+        <span class="list" data-filter="photos">PHOTOS</span> |
+        <span class="list" data-filter="videos">VIDEOS</span>
     </div>
 
     <!-- ✅ Masonry Gallery -->
@@ -199,7 +197,7 @@
 
     /* ✅ Filtering System */
     document.addEventListener("DOMContentLoaded", function () {
-        const filters = document.querySelectorAll(".list");
+        const filters = document.querySelectorAll(".filter-options span");
         const items = document.querySelectorAll(".gallery-item");
 
         filters.forEach(filter => {
