--- a/gallery.html
+++ b/gallery.html
@@ -228,6 +228,9 @@
             <img src="https://i.imgur.com/CGZNeVW.png" alt="Logo">
         </div>
         <div class="social-links">
+             <a href="https://www.youtube.com/@TheRodeoToad" target="_blank">
+                <img src="https://commons.wikimedia.org/wiki/File:YouTube_play_button_icon_(2013%E2%80%932017).svg" alt="YouTube">
+             </a>
             <a href="https://www.instagram.com/rodeo.toad" target="_blank">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
             </a>
