--- a/lab-notebook.html
+++ b/lab-notebook.html
@@ -24,12 +24,13 @@
 
 <!-- ✅ ADDED MISSING MODAL -->
 <div id="post-modal" class="modal">
-    <div class="modal-content">
-        <span class="close-btn" onclick="closePost()">&times;</span>
-        <h2 id="modal-title"></h2>
-        <div id="modal-content"></div>
+        <div class="modal-content">
+            <span class="close-btn" onclick="closePost()">&times;</span>
+            <h2 id="modal-title"></h2>
+            <p id="modal-date"></p>
+            <div id="modal-content"></div>
+        </div>
     </div>
-</div>
 
 <footer>
     <div class="footer-container">
