--- a/lab-notebook.html
+++ b/lab-notebook.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>  <!-- ✅ Load marked.js FIRST -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab Notebook</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <script defer src="script.js"></script>  <!-- ✅ Ensure script.js loads AFTER marked -->
 </head>
 <body>
 <nav>
