--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <!-- ✅ Splash Page with Video Background -->
 <section class="splash-container">
     <video autoplay muted loop playsinline class="splash-video">
-        <source src="<a href="https://imgur.com/iAlm8AE"><img src="https://i.imgur.com/iAlm8AE.mp4" title="source: imgur.com" /></a>" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+    <source src="https://i.imgur.com/iAlm8AE.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
     <div class="splash-text">
         Welcome to My Research! Exploring the wonders of marine biology.
     </div>
