--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     Your browser does not support the video tag.
 </video>
     <div class="splash-text">
-        Welcome to My Research! Exploring the wonders of marine biology.
+        The oceans are transforming—how will marine life keep up? My research dives into the molecular blueprints of adaptation, using omics techniques to assess how selective pressures shape evolutionary trajectories.
     </div>
 </section>
 </html>
