--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 <section class="about-container">
     <div class="about-text">
         <h1>Hey There!</h1>
-        <p>I am a PhD student in Evolutionary Biology, passionate about understanding the mechanisms driving species adaptation and evolution.</p>
+        <p>I am a PhD student in Evolutionary Biology. My research dives into the molecular blueprints of adaptation, using omics techniques to assess how selective pressures shape evolutionary trajectories</p>
 
         <div class="cta-buttons">
             <a href="YOUR_GOOGLE_SCHOLAR_LINK" class="cta-button">Find me on Google Scholar →</a>
